# transmiBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  tests.yml
docs/: README.md  architecture.md  deployment.md  libraries.md  modules.md  operations.md
src/app/: __init__.py  config.py  exceptions.py  health.py  logging_config.py  main.py
src/app/agents/: __init__.py
src/app/agents/transmi_agent/: __init__.py  agent.py  prompts.py  tools.py  tools_telegram.py
src/app/db/: __init__.py  crud.py  models.py  session.py
src/app/services/: __init__.py  simit.py  tomtom.py
src/app/telegram/: __init__.py  bot.py  handlers.py
src/transmibot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/var/: transmibot.db
