[project]
name = "transmibot"
version = "0.1.0"
description = "Telegram chatbot scaffold powered by Google ADK agents"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot[webhooks]>=22.5",
  "google-adk>=0.5.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "playwright>=1.47",
  "httpx>=0.27",
]

 [tool.uv]
 package = true

 [tool.uv.workspace]
 members = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

